WIP: performance in carousel